# backend-fitness

./: .env-example  .gitignore  Dockerfile  docker-compose.yml  procfile  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_stripe_customer_id.py
app/: settings.py  urls.py
cart/: models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
category/: models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_payments.py  0003_review.py
plans/: models.py  serializers.py  urls.py  views.py
plans/migrations/: 0001_initial.py  0002_alter_plans_subscription_required.py  0003_rename_monthly_price_subscriptionplan_price_and_more.py  0004_usersubscription_status.py  0005_usersubscription_payment_status_and_more.py  0006_post.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_productimage_image.py  0003_product_product_primary_image.py
utils/: common.py  upload_files.py
